Fixes replication settings table width and columns collapsing behaviour

--- a/airbyte-webapp/src/components/MainPageWithScroll/MainPageWithScroll.module.scss
+++ b/airbyte-webapp/src/components/MainPageWithScroll/MainPageWithScroll.module.scss
@@ -13,7 +13,7 @@
 
 .content {
   overflow-y: auto;
-  padding-top: 17px;
   height: 100%;
-  padding-bottom: variables.$defaultBottomMargin;
+  padding: 17px 20px variables.$defaultBottomMargin 20px;
+  min-width: 960px;
 }
